# BasicsML

./: .gitignore  README.md  main.py  pyproject.toml
1_Intro/.ipynb_checkpoints/: ex_1-checkpoint.ipnyb  ex_1-checkpoint.ipynb
2_Distributions/: EM_ALGO.ipynb  ex_2.ipynb  means.py  random_samples.npz  test_gammas.npz  test_logprob.npz  test_mstep.npz  test_regularization.npz
3_Linear_Discriminants/: exercise3.ipynb
4_Linear_Regression/: exercise4.ipynb
